fixed broken styles on teams page 🛠

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,8 +42,11 @@ html[data-theme="dark"] {
   .headline {
     @apply mt-3 mb-3 text-3xl sm:text-5xl;
   }
+  /* .subheadline {
+    @apply mt-0 mb-3 text-3xl ;
+  } */
   .subheadline {
-    @apply mt-0 mb-3 text-3xl;
+    @apply mt-0 mb-3 text-2xl sm:text-3xl;
   }
   .eyebrow {
     @apply mt-0 mb-2 text-2xl font-bold text-gray-400 lg:text-2xl;
